[gd_scene load_steps=20 format=2]

[ext_resource path="res://bg.png" type="Texture" id=1]
[ext_resource path="res://Pomodoro_script.gd" type="Script" id=2]
[ext_resource path="res://The Impostor.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://play_normal.png" type="Texture" id=4]
[ext_resource path="res://play_pressed.png" type="Texture" id=5]
[ext_resource path="res://pause_normal.png" type="Texture" id=6]
[ext_resource path="res://pause_pressed.png" type="Texture" id=7]
[ext_resource path="res://button_pressed.png" type="Texture" id=8]
[ext_resource path="res://button_normal.png" type="Texture" id=9]
[ext_resource path="res://mini_button.png" type="Texture" id=10]
[ext_resource path="res://progress_bar.png" type="Texture" id=11]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float percentage : hint_range(0.0, 1.0) = 0.5;
uniform float circle_cutoff : hint_range(0.0, 1.0) = 0.5; 
uniform vec4 background_color : hint_color;
uniform vec4 water_color_1 : hint_color;
uniform vec4 water_color_2 : hint_color;

void fragment() {
    float per = 1.0 - percentage;
    float wave1 = (sin((UV.x + TIME) * 8.0) * 0.01) + UV.y;
    wave1 = float(wave1 > per);
    float wave2 = (sin((UV.x - TIME) * 8.0) * 0.01) + UV.y;
    wave2 = float(wave2 > per);
    float circle = distance(UV, vec2(0.5, 0.5));
    circle = float(circle > circle_cutoff);
    vec4 compose = mix(background_color, water_color_1, wave1);
    compose = mix(compose, water_color_2, wave2);
    compose = mix(compose, background_color, circle);
    COLOR = compose;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/percentage = 1.0
shader_param/circle_cutoff = 0.741
shader_param/background_color = Color( 0.2, 0.219608, 0.262745, 1 )
shader_param/water_color_1 = Color( 0.74902, 1, 0.988235, 1 )
shader_param/water_color_2 = Color( 0, 0.776471, 0.741176, 1 )

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;


uniform vec4 blue_tint : hint_color;

uniform vec2 sprite_scale;
uniform float scale_x = 0.67;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(12.9898, 78.233)))* 43758.5453123);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

void fragment(){
	
	vec2 noisecoord1 = UV * sprite_scale * scale_x;
	vec2 noisecoord2 = UV * sprite_scale * scale_x + 4.0;
	
	vec2 motion1 = vec2(TIME * 0.3, TIME * -0.4);
	vec2 motion2 = vec2(TIME * 0.1, TIME * 0.5);
	
	vec2 distort1 = vec2(noise(noisecoord1 + motion1), noise(noisecoord2 + motion1)) - vec2(0.5);
	vec2 distort2 = vec2(noise(noisecoord1 + motion2), noise(noisecoord2 + motion2)) - vec2(0.5);
	
	vec2 distort_sum = (distort1 + distort2) / 60.0;
	
	vec4 color = textureLod(SCREEN_TEXTURE, SCREEN_UV + distort_sum, 0.0);
	
	color = mix(color, blue_tint, 0.3);
	color.rgb = mix(vec3(0.5), color.rgb, 1.4);
	
	float near_top = (UV.y + distort_sum.y) / (0.2 / sprite_scale.y);
	near_top = clamp(near_top, 0.0, 1.0);
	near_top = 1.0 - near_top;
	
	color = mix(color, vec4(1.0), near_top);
	
	float edge_lower = 0.6;
	float edge_upper = edge_lower + 0.1;
	
	if(near_top > edge_lower){
		color.a = 0.0;
		
		if(near_top < edge_upper){
			color.a = (edge_upper - near_top) / (edge_upper - edge_lower);
		}
	}
	
	COLOR = color;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/blue_tint = null
shader_param/sprite_scale = null
shader_param/scale_x = 0.67

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="Pomodoro" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = 2.0
margin_right = 901.0
margin_bottom = 898.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.176471, 0.235294, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="Control"]
modulate = Color( 1, 0.333333, 0.317647, 1 )
position = Vector2( 448.423, 451.353 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_left = 0.278
anchor_right = 0.722
anchor_bottom = 1.001
margin_left = -0.422028
margin_top = -1.0
margin_right = 0.421936
margin_bottom = 0.101929
color = Color( 0.2, 0.219608, 0.262745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress_bar" type="TextureProgress" parent="Control/ColorRect"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
max_value = 100.0
value = 100.0
texture_progress = ExtResource( 11 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Control/ColorRect"]

[node name="text_label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -198.5
margin_top = 200.0
margin_right = 198.5
margin_bottom = 542.0
custom_fonts/font = SubResource( 1 )
text = "60:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_frame" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 151.0
margin_right = 60.0
margin_bottom = 271.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_button" type="TextureButton" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.735
anchor_right = 0.5
anchor_bottom = 0.735
margin_left = -60.0
margin_top = -60.03
margin_right = 60.0
margin_bottom = 59.97
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.735
anchor_right = 0.5
anchor_bottom = 0.735
margin_left = -60.0
margin_top = -60.03
margin_right = 60.0
margin_bottom = 59.97
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switch" type="TextureButton" parent="Control"]
anchor_left = 0.495
anchor_top = 0.081
anchor_right = 0.495
anchor_bottom = 0.081
margin_left = -74.505
margin_top = -42.738
margin_right = 61.495
margin_bottom = 34.262
rect_scale = Vector2( 1.1, 1.1 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/switch"]
modulate = Color( 1, 0.333333, 0.317647, 1 )
anchor_left = 0.512
anchor_top = 0.5
anchor_right = 0.512
anchor_bottom = 0.5
margin_left = -60.039
margin_top = -13.9071
margin_right = 59.961
margin_bottom = 14.0929
custom_fonts/font = SubResource( 2 )
text = "Focus"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Control"]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.928
anchor_right = 0.501
anchor_bottom = 0.928
margin_left = -72.5986
margin_top = -65.4427
margin_right = 75.5024
margin_bottom = 66.5573
color = Color( 1, 0.333333, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stop" type="TextureButton" parent="Control"]
visible = false
anchor_left = 0.506
anchor_top = 0.914
anchor_right = 0.506
anchor_bottom = 0.914
margin_left = -110.477
margin_top = -51.501
margin_right = 100.523
margin_bottom = 40.499
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="Control/stop"]
modulate = Color( 1, 0.333333, 0.317647, 1 )
anchor_left = 0.5
anchor_top = 0.562
anchor_right = 0.5
anchor_bottom = 0.562
margin_left = -75.0
margin_top = -20.975
margin_right = 75.0
margin_bottom = 21.025
custom_fonts/font = SubResource( 5 )
text = "stop"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ratio" type="Label" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -76.0
margin_right = 238.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 6 )
text = "work-play
ratio

0  mins work FOR
0 mins play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="study_count" type="Label" parent="Control"]
anchor_left = 0.838
anchor_top = 0.453
anchor_right = 0.838
anchor_bottom = 0.453
margin_left = -103.862
margin_top = -37.754
margin_right = 103.138
margin_bottom = 37.246
custom_fonts/font = SubResource( 6 )
text = "Work: 0 mins
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_count" type="Label" parent="Control"]
anchor_left = 0.839
anchor_top = 0.537
anchor_right = 0.839
anchor_bottom = 0.537
margin_left = -103.49
margin_top = -37.2836
margin_right = 103.51
margin_bottom = 37.7164
custom_fonts/font = SubResource( 6 )
text = "Play: 0 mins
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Audio" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="Control/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Control/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/switch" to="." method="_on_switch_pressed"]
[connection signal="pressed" from="Control/stop" to="." method="_on_stop_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
